--- a/src/styles/client.module.scss
+++ b/src/styles/client.module.scss
@@ -191,8 +191,8 @@
     }
 }
 
-.company-section {
-    .company-content {
+.recruiter-section {
+    .recruiter-content {
         padding-top: 50px;
 
         .card-customize {
@@ -294,7 +294,7 @@
         line-height: 2em;
     }
 
-    .company {
+    .recruiter {
         margin: 20px 0;
         color: #353535;
         font-size: 27px;
