--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -16,9 +16,9 @@
     &.close {
         transform: scale(0);
         opacity: 0;
-        -webkit-transition: all .1s linear;
-        -o-transition: all .25s linear;
-        transition: all .25s linear;
+        -webkit-transition: all 0.1s linear;
+        -o-transition: all 0.25s linear;
+        transition: all 0.25s linear;
     }
 }
 
