--- a/src/styles/admin.module.scss
+++ b/src/styles/admin.module.scss
@@ -9,3 +9,35 @@
         padding: 10px 0 20px 0;
     }
 }
+
+.modalUser {
+    &.open {
+        animation: slideFadeIn 0.1s ease-out forwards;
+    }
+
+    &.close {
+        animation: slideFadeOut 0.1s ease-in forwards;
+    }
+}
+
+@keyframes slideFadeIn {
+    0% {
+        opacity: 0;
+        transform: translateY(20px) scale(0.95);
+    }
+    100% {
+        opacity: 1;
+        transform: translateY(0) scale(1);
+    }
+}
+
+@keyframes slideFadeOut {
+    0% {
+        opacity: 1;
+        transform: translateY(0) scale(1);
+    }
+    100% {
+        opacity: 0;
+        transform: translateY(20px) scale(0.95);
+    }
+}
