--- a/src/styles/client.module.scss
+++ b/src/styles/client.module.scss
@@ -137,14 +137,14 @@ $font-size-mobile: 20px;
 }
 
 .container {
-    padding-right: 15px;
     padding-left: 15px;
+    padding-right: 15px;
     margin-right: auto;
     margin-left: auto;
 }
 
 .nav {
-    margin: 0px;
+    margin: auto;
     height: 55px;
 }
 
@@ -327,56 +327,6 @@ $font-size-mobile: 20px;
     }
 }
 
-// @media (min-width: 768px) {
-//     .container {
-//         width: 750px;
-//     }
-// }
-
-// @media (min-width: 992px) {
-//     .container {
-//         width: 970px;
-//     }
-// }
-
-// @media (min-width: 1260px) {
-//     .container {
-//         width: 1260px;
-//     }
-
-//     .nav {
-//         width: 1500px;
-//     }
-// }
-
-// @media (min-width: 767px) {
-//     ::-webkit-scrollbar {
-//         width: 8px;
-//     }
-
-//     ::-webkit-scrollbar-button {
-//         width: 8px;
-//         height: 5px;
-//     }
-
-//     ::-webkit-scrollbar-track {
-//         background: rgb(255, 255, 255);
-//         border: thin solid rgb(238, 238, 238);
-//         box-shadow: 0px 0px 3px #dfdfdf inset;
-//         border-radius: 10px;
-//     }
-
-//     ::-webkit-scrollbar-thumb {
-//         background: #ccc;
-//         border: thin solid #ccc;
-//         border-radius: 10px;
-//     }
-
-//     ::-webkit-scrollbar-thumb:hover {
-//         background: #7d7d7d;
-//     }
-// }
-
 @-moz-keyframes spin {
     100% {
         -moz-transform: rotate(360deg);
@@ -403,5 +353,64 @@ $font-size-mobile: 20px;
     }
     50% {
         transform: translateY(-10px);
+    }
+}
+
+// Desktop or Tablet
+@media (min-width: 768px) {
+    .container {
+        padding-left: 0;
+        padding-right: 0;
+        width: 750px;
+    }
+}
+
+// Low Desktop
+@media (min-width: 992px) {
+    .container {
+        padding-left: 0;
+        padding-right: 0;
+        width: 970px;
+    }
+}
+
+// Desktop
+@media (min-width: 1260px) {
+    .container {
+        padding-left: 0;
+        padding-right: 0;
+        width: 1260px;
+    }
+
+    .nav {
+        width: 1500px;
+    }
+}
+
+@media (min-width: 768px) {
+    ::-webkit-scrollbar {
+        width: 8px;
+    }
+
+    ::-webkit-scrollbar-button {
+        width: 8px;
+        height: 5px;
+    }
+
+    ::-webkit-scrollbar-track {
+        background: rgb(255, 255, 255);
+        border: thin solid rgb(238, 238, 238);
+        box-shadow: 0px 0px 3px #dfdfdf inset;
+        border-radius: 10px;
+    }
+
+    ::-webkit-scrollbar-thumb {
+        background: #ccc;
+        border: thin solid #ccc;
+        border-radius: 10px;
+    }
+
+    ::-webkit-scrollbar-thumb:hover {
+        background: #7d7d7d;
     }
 }
