change theme color

--- a/src/styles/auth.module.scss
+++ b/src/styles/auth.module.scss
@@ -2,6 +2,7 @@ $color-white: #ffffff;
 $color-light: #f1f5f9;
 $color-black: #121212;
 $color-night: #001632;
+$color-main: #00b452;
 
 $color-red: #f44336;
 $color-blue: #1a73e8;
