--- a/src/styles/client.module.scss
+++ b/src/styles/client.module.scss
@@ -1,8 +1,8 @@
 $color-main: #00b452;
 $color-main-lighter: #c7f7dd;
 $color-font: #37434f;
-$font-size-main: 16px;
-$font-size-mobile: 20px;
+$font-size-main: 1rem;
+$font-size-mobile: 1.25rem;
 
 .header-section {
     display: block;
