--- a/src/styles/app.module.scss
+++ b/src/styles/app.module.scss
@@ -25,8 +25,7 @@ $color-font: #37434f;
     height: 100%;
     border-right: 0;
     border-radius: 12px;
-    font-size: 16px;
-    font-weight: 500;
+    font-size: 1rem;
 
     :global(.ant-menu-item.ant-menu-item-selected),
     :global(.ant-menu-item.ant-menu-item-selected.ant-menu-item-active):hover,
@@ -50,6 +49,6 @@ $color-font: #37434f;
     }
 
     :global(.ant-menu-item-icon) {
-        font-size: 16px !important;
+        font-size: 1.25rem !important;
     }
 }
