--- a/src/styles/client.module.scss
+++ b/src/styles/client.module.scss
@@ -5,7 +5,7 @@ $font-size-main: 1rem;
 $font-size-mobile: 1.25rem;
 
 .header-section {
-    display: block;
+    // display: block;
     width: 100%;
     height: 55px;
     background-color: #ffffff;
@@ -218,10 +218,7 @@ $font-size-mobile: 1.25rem;
 
 .recruiter-section {
     .recruiter-content {
-        padding-top: 50px;
-
         .card-customize {
-            height: 200px;
             width: 200px;
             margin: 20px auto;
         }
@@ -275,12 +272,12 @@ $font-size-mobile: 1.25rem;
         padding: 10px 15px;
         border: 0;
         border-radius: 5px;
-        background-color: #ea1e30;
+        background-color: $color-main;
         -webkit-font-smoothing: antialiased;
         outline: 0;
 
         &:hover {
-            background-color: #d82727;
+            background-color: #3ce688;
         }
     }
 
@@ -324,6 +321,16 @@ $font-size-mobile: 1.25rem;
         justify-content: center;
         width: 100%;
         align-items: center;
+    }
+}
+
+:global(.ant-card-hoverable) {
+    border-color: transparent !important;
+    transition: all 0.3s ease !important;
+
+    &:hover {
+        box-shadow: 0 4px 8px -2px rgba(0, 180, 82, 0.3), 0 8px 16px 0 rgba(0, 180, 82, 0.25),
+            0 12px 24px 6px rgba(0, 180, 82, 0.2) !important;
     }
 }
 
