button change language and fixed header

--- a/src/styles/client.module.scss
+++ b/src/styles/client.module.scss
@@ -5,8 +5,11 @@ $font-size-main: 1rem;
 $font-size-mobile: 1.25rem;
 
 .header-section {
-    // display: block;
+    position: fixed;
+    top: 0;
+    left: 0;
     width: 100%;
+    z-index: 1000;
     height: 55px;
     background-color: #ffffff;
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
@@ -45,6 +48,7 @@ $font-size-mobile: 1.25rem;
             display: flex;
             justify-content: end;
             align-items: center;
+            gap: 12px;
 
             a,
             span {
