--- a/src/styles/admin.module.scss
+++ b/src/styles/admin.module.scss
@@ -1,3 +1,5 @@
+$color-main: #00b452;
+
 .upsert-job-container {
     background-color: white;
     padding: 10px 30px;
@@ -26,6 +28,28 @@
     justify-content: center;
     cursor: pointer;
     animation: float 4s ease-in-out infinite;
+}
+
+:global {
+    .ant-card {
+        box-shadow: 0 4px 8px -2px rgba(0, 180, 82, 0.15), 0 8px 16px 0 rgba(0, 180, 82, 0.12),
+            0 12px 24px 6px rgba(0, 180, 82, 0.08) !important;
+
+        .ant-card-head {
+            font-size: 20px !important;
+            color: $color-main !important;
+        }
+
+        .ant-card-body {
+            .ant-statistic-title {
+                font-size: 16px !important;
+            }
+            .ant-statistic-content {
+                font-size: 24px !important;
+                color: #37434f;
+            }
+        }
+    }
 }
 
 @keyframes float {
