--- a/src/styles/app.module.scss
+++ b/src/styles/app.module.scss
@@ -26,6 +26,7 @@ $color-font: #37434f;
     height: 100%;
     border-right: 0;
     border-radius: 12px;
+    border-inline-end: 0px !important;
     font-size: 1rem;
 
     :global(.ant-menu-item.ant-menu-item-selected),
