--- a/src/styles/client.module.scss
+++ b/src/styles/client.module.scss
@@ -202,7 +202,7 @@ $font-size-mobile: 1.25rem;
                     transition: 0.2s all;
                     font-size: 17px;
                     display: -webkit-box;
-                    -webkit-line-clamp: 2;
+                    -webkit-line-clamp: 1;
                     -webkit-box-orient: vertical;
                 }
 
@@ -333,8 +333,31 @@ $font-size-mobile: 1.25rem;
     transition: all 0.3s ease !important;
 
     &:hover {
+        cursor: auto;
         box-shadow: 0 4px 8px -2px rgba(0, 180, 82, 0.3), 0 8px 16px 0 rgba(0, 180, 82, 0.25),
             0 12px 24px 6px rgba(0, 180, 82, 0.2) !important;
+
+        .card-job-content {
+            .card-job-right {
+                .job-title {
+                    color: $color-main;
+                    cursor: pointer;
+                }
+            }
+        }
+    }
+}
+
+:global {
+    .ant-btn {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border: 2px solid $color-main;
+
+        &:hover {
+            background-color: $color-main-lighter !important;
+        }
     }
 }
 
@@ -364,6 +387,15 @@ $font-size-mobile: 1.25rem;
     }
     50% {
         transform: translateY(-10px);
+    }
+}
+
+// Mobile
+@media (max-width: 500px) {
+    :global {
+        .ant-card-body {
+            padding: 12px !important;
+        }
     }
 }
 
