display total jobs for recruiters

--- a/src/styles/client.module.scss
+++ b/src/styles/client.module.scss
@@ -226,6 +226,10 @@ $font-size-mobile: 1.25rem;
             width: 200px;
             margin: 20px auto;
         }
+
+        :global(.ant-card-body) {
+            padding: 0 !important;
+        }
     }
 }
 
