--- a/src/styles/auth.module.scss
+++ b/src/styles/auth.module.scss
@@ -72,6 +72,7 @@ $shadow-large: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0,
             color: $color-black;
             background: $color-white;
             box-shadow: $shadow-large;
+            animation: scaleIn 0.5s ease-out forwards;
 
             &.wrapper_login {
                 max-width: 28rem;
@@ -183,5 +184,16 @@ $shadow-large: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0,
                 }
             }
         }
+    }
+}
+
+@keyframes scaleIn {
+    0% {
+        transform: scale(0.9);
+        opacity: 0;
+    }
+    100% {
+        transform: scale(1);
+        opacity: 1;
     }
 }
