--- a/src/styles/client.module.scss
+++ b/src/styles/client.module.scss
@@ -140,6 +140,10 @@ $font-size-mobile: 1.25rem;
     }
 }
 
+:global(.ant-image) {
+    width: 100%;
+}
+
 .container {
     padding-left: 15px;
     padding-right: 15px;
@@ -469,6 +473,12 @@ $font-size-mobile: 1.25rem;
             background-color: $color-main-lighter !important;
         }
     }
+}
+
+ul,
+ol {
+    list-style-type: none;
+    padding-left: 20px;
 }
 
 @-moz-keyframes spin {
